--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,12 @@
     letter-spacing: 0 !important;
 }
 
+body {
+    background: #F5F5F5;
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+
 svg {
     line-height: 0 !important;
 }
