complete user gift and add date and is receive

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,10 @@
     letter-spacing: 0 !important;
 }
 
+fieldset {
+    border: none !important;
+}
+
 body {
     background: #EAEAEA;
     overflow-x: hidden;
